--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Avatár</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -25,6 +28,7 @@
                 <a class="nav-item nav-link" href="szereplok.html">Szereplők</a>
                 <a class="nav-item nav-link" href="#cselekmeny">Cselekmény</a>
                 <a class="nav-item nav-link" href="#forras">Források</a>
+                <a class="nav-item nav-link" href="https://forms.gle/s9z4XjCCcaRVFCKVA" target="_blank">Kérdőív</a>
             </div>
         </div>
     </nav>
@@ -38,7 +42,8 @@
     <main class="container tartalom">
         <div class="row">
             <div class="col pt-3">
-                <p>Az Avatar című film <em>2009 decemberében jelent meg</em>, melynek történetét James Cameron 1995-ben
+                <p class="bekezdes">Az Avatar című film <em>2009 decemberében jelent meg</em>, melynek történetét James
+                    Cameron 1995-ben
                     kezdte el
                     kitalálni.
                     Ez
@@ -63,7 +68,8 @@
                         alapú
                         rendszert</strong>
                     fejlesztett ki.</p>
-                <p>Az élőlényeknek külön meg kellett tervezni a mozgásukat. A szereplők komoly katonai kiképzésen vettek
+                <p class="bekezdes">Az élőlényeknek külön meg kellett tervezni a mozgásukat. A szereplők komoly katonai
+                    kiképzésen vettek
                     rész,
                     íjász
                     leckéket, lovaglást és mozgás kultúrát tanultak. Hawaii-ra is elvitték a színészeket, hogy
