--- a/pandora.html
+++ b/pandora.html
@@ -8,6 +8,9 @@
     <title>Pandora</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/pandora.css">
 </head>
 
@@ -23,6 +26,7 @@
                 <a class="nav-item nav-link active" href="index.html">Főoldal</a>
                 <a class="nav-item nav-link" href="pandora.html">Pandora</a>
                 <a class="nav-item nav-link" href="szereplok.html">Szereplők</a>
+                <a class="nav-item nav-link" href="https://forms.gle/s9z4XjCCcaRVFCKVA" target="_blank">Kérdőív</a>
             </div>
         </div>
     </nav>
@@ -36,7 +40,8 @@
     <main class="container tartalom p-3">
         <div class="row">
             <div class="col my-3">
-                <img class="img-fluid img-thumbnail mx-auto d-none d-md-block bg-info kep" src="Ikran.jpg" alt="Ikran">
+                <img class="img-fluid img-thumbnail mx-auto d-none d-md-block bg-info" id="kep" src="Ikran.jpg"
+                    alt="Ikran" title="Ikran">
                 Pandora az Alfa Centauri naprendszerben a <em>Polyphemos gázóriás körül kering három másik holddal
                     együtt</em>.
                 A Földtől
@@ -58,9 +63,9 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12 d-md-none">
-                <img class="img-fluid img-thumbnail mx-auto d-block bg-info" src="kalapfeju.jpg"
-                    alt="Hammerhead titanothere">
+            <div class="col-12">
+                <img class="img-fluid img-thumbnail mx-auto d-block d-md-none bg-info" src="kalapfeju.jpg"
+                    alt="Hammerhead titanothere" title="Hammerhead titanothere">
             </div>
             <div class="col-md-5">
                 <h2>Állat világa:</h2>
@@ -91,12 +96,13 @@
             </div>
             <div class="col-md-5">
                 <img class="img-fluid img-thumbnail d-none d-md-block bg-info" src="kalapfeju.jpg"
-                    alt="Hammerhead titanothere">
+                    alt="Hammerhead titanothere" title="Hammerhead titanothere">
             </div>
         </div>
         <div class="row">
             <div class="col-12 d-md-none">
-                <img class="img-fluid img-thumbnail mx-auto d-block bg-info" src="szentfa.jpg" alt="Lelkek fája">
+                <img class="img-fluid img-thumbnail mx-auto d-block bg-info" src="szentfa.jpg" alt="Lelkek fája"
+                    title="Lelkek fája">
             </div>
             <div class="col-md-5">
                 <h2>Növény világa:</h2>
@@ -114,7 +120,8 @@
                 </dl>
             </div>
             <div class="col-md-5">
-                <img class="img-fluid img-thumbnail mx-auto d-block bg-info" src="szentfa.jpg" alt="Lelkek fája">
+                <img class="img-fluid img-thumbnail mx-auto d-none d-md-block bg-info" src="szentfa.jpg"
+                    alt="Lelkek fája" title="Lelkek fája">
             </div>
         </div>
     </main>
