--- a/szereplok.html
+++ b/szereplok.html
@@ -8,6 +8,9 @@
     <title>Avatár szereplők</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/szereplok.css">
 </head>
 
@@ -23,6 +26,7 @@
                 <a class="nav-item nav-link active" href="index.html">Főoldal</a>
                 <a class="nav-item nav-link" href="pandora.html">Pandora</a>
                 <a class="nav-item nav-link" href="szereplok.html">Szereplők</a>
+                <a class="nav-item nav-link" href="https://forms.gle/s9z4XjCCcaRVFCKVA" target="_blank">Kérdőív</a>
             </div>
         </div>
     </nav>
@@ -32,7 +36,8 @@
                 <h2>Főbb karakterek:</h2>
             </div>
             <div class="col-md-6">
-                <img class="img-fluid img-thumbnail mx-auto d-block bg-info" src="navik.png" alt="Na'vik">
+                <img class="img-fluid img-thumbnail mx-auto d-block bg-info" src="navik.png" alt="Na'vik"
+                    title="Na'vik">
             </div>
         </div>
         <div class="row">
@@ -40,7 +45,8 @@
                 <table>
                     <tr>
                         <td class="elso">Na’vik:</td>
-                        <td>Érző földönkívüli humanoidok faj, akik a Pandora dzsungelében laknak. Átlagosan körülbelül 3
+                        <td class="szoveg">Érző földönkívüli humanoidok faj, akik a Pandora dzsungelében laknak.
+                            Átlagosan körülbelül 3
                             méter
                             magasak,
                             sima, csíkos ciánszínű bőrük van, nagy sárga szemekkel és hosszú farokkal. Testük karcsúbb,
@@ -54,7 +60,8 @@
                     <tr>
                         <td class="elso">Jake Sully<br>(Sam Worthington):</td>
 
-                        <td>Jake tengerészgyalogos volt, de megrokkant. Eredetileg a testvére vett részt a kísérletben,
+                        <td class="szoveg">Jake tengerészgyalogos volt, de megrokkant. Eredetileg a testvére vett részt
+                            a kísérletben,
                             de ő
                             elhunyt. Mivel azonos volt a génállományuk, ezért Jake lehetőséget kapott, hogy Pandorára
                             menjen. Az
@@ -77,7 +84,8 @@
 
                     <tr>
                         <td class="elso">Neytiri<br>(Zoë Saldana):</td>
-                        <td>Az Omaticaya klán Na'vi hercegnője. Találkozik Jake Sullyval az egyik pandorai erdőben, és
+                        <td class="szoveg">Az Omaticaya klán Na'vi hercegnője. Találkozik Jake Sullyval az egyik
+                            pandorai erdőben, és
                             segít
                             neki,
                             amikor megtámadja egy falka viperfarkas. Neytiri hamarosan Jake tanára lesz, és segít neki
@@ -92,13 +100,13 @@
                     </tr>
                     <tr>
                         <td class="elso">Dr. Grace Augustine<br>(Sigourney Weaver):</td>
-                        <td>A tudományos személyzet tagja az Avatar programban. Segített Jake Sully-nak a
+                        <td class="szoveg">A tudományos személyzet tagja az Avatar programban. Segített Jake Sully-nak a
                             beilleszkedésben.
                             Ő is jó kapcsolatban volt a na’vik-kal, amíg meg nem halt a támadásban.</td>
                     </tr>
                     <tr>
                         <td class="elso">Quaritch ezredes<br>(Stephen Lang):</td>
-                        <td>Miles Quaritch ezredes a 2150-es évek elején a Pandora biztonsági
+                        <td class="szoveg">Miles Quaritch ezredes a 2150-es évek elején a Pandora biztonsági
                             főnökeként
                             szolgált. A pandorai háború idején a csapat rangidős parancsnokaként szolgált. A kimutatott
                             érc
@@ -120,7 +128,7 @@
             </div>
         </div>
         <div class="row pb-3">
-            <div class="col-9">
+            <div class="col-8">
                 <table id="masodik">
                     <tr>
                         <td class="elso">Rendezte:</td>
@@ -133,10 +141,7 @@
                     <tr>
                         <td class="elso">Producer</td>
                         <td>James Cameron, <br>
-                            Jon Landau, <br>
-                            Colin Wilson, <br>
-                            Brooke Breton, <br>
-                            Josh McLaglen (társ)</td>
+                            Jon Landau <br>
                     </tr>
                     <tr>
                         <td class="elso">Vágó:</td>
@@ -149,7 +154,17 @@
                         <td>James Horner, <br>
                             Simon Franglen</td>
                     </tr>
+                    <tr>
+                        <td class="elso">Látványtervező:</td>
+                        <td>Rick Carter, <br>
+                            Robert Stromberg, <br>
+                            Kim Sinclair</td>
+                    </tr>
                 </table>
+            </div>
+            <div class="col-4">
+                <img class="img-fluid img-thumbnail mx-auto d-block bg-info d-none d-md-block" id="james"
+                    src="avatar-james-cameron-2.jpg" alt="James Cameron" title="James Cameron">
             </div>
         </div>
     </main>
