--- a/pandora.html
+++ b/pandora.html
@@ -8,15 +8,12 @@
     <title>Pandora</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/pandora.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Avatár</a>
+        <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,7 +21,6 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="index.html">Főoldal</a>
-                <a class="nav-item nav-link" href="pandora.html">Pandora</a>
                 <a class="nav-item nav-link" href="szereplok.html">Szereplők</a>
                 <a class="nav-item nav-link" href="https://forms.gle/vSq2aA9jDRyvEHu59" target="_blank">Kérdőív</a>
             </div>
@@ -94,17 +90,17 @@
                     <dd>Az ikranokhoz hasonlítanak.</dd>
                 </dl>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-6 offset-1">
                 <img class="img-fluid img-thumbnail d-none d-md-block bg-info" src="kalapfeju.jpg"
                     alt="Hammerhead titanothere" title="Hammerhead titanothere">
             </div>
         </div>
-        <div class="row">
-            <div class="col-12 d-md-none">
+        <div class="row mt-3">
+            <div class="col-md-5 offset-1">
                 <img class="img-fluid img-thumbnail mx-auto d-block bg-info" src="szentfa.jpg" alt="Lelkek fája"
                     title="Lelkek fája">
             </div>
-            <div class="col-md-5">
+            <div class="col-md-5 offset-1">
                 <h2>Növény világa:</h2>
                 <dl>
                     <dt>Helicoradian:</dt>
@@ -119,10 +115,6 @@
                     <dd>A klánok ilyen fák alatt laknak.</dd>
                 </dl>
             </div>
-            <div class="col-md-5">
-                <img class="img-fluid img-thumbnail mx-auto d-none d-md-block bg-info" src="szentfa.jpg"
-                    alt="Lelkek fája" title="Lelkek fája">
-            </div>
         </div>
     </main>
     <footer class="container">
@@ -132,6 +124,9 @@
             </div>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 
 </html>
