--- a/index.html
+++ b/index.html
@@ -8,22 +8,18 @@
     <title>Avatár</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Avatár</a>
+        <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="index.html">Főoldal</a>
                 <a class="nav-item nav-link" href="pandora.html">Pandora</a>
                 <a class="nav-item nav-link" href="szereplok.html">Szereplők</a>
                 <a class="nav-item nav-link" href="#cselekmeny">Cselekmény</a>
@@ -34,14 +30,14 @@
     </nav>
     <header class="container">
         <div class="row">
-            <div class="col mt-2 mt-md-5 mb-3">
+            <div class="col-12 mt-2 mt-md-5 mb-3">
                 <img class="img-fluid img-thumbnail mx-auto d-block bg-info" src="Avatar-Logo.jpg" alt="Avatar">
             </div>
         </div>
     </header>
     <main class="container tartalom">
         <div class="row">
-            <div class="col pt-3">
+            <div class="col-12 pt-3">
                 <p class="bekezdes">Az Avatar című film <em>2009 decemberében jelent meg</em>, melynek történetét James
                     Cameron 1995-ben
                     kezdte el
@@ -90,12 +86,12 @@
             </div>
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col-12">
                 <img class="img-fluid img-thumbnail mx-auto d-block bg-info" src="face.jpg" alt="">
             </div>
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col-12">
                 <h2 id="cselekmeny">Cselekmény:</h2>
                 <p>A 22. század közepén az emberiség már rendelkezik olyan technológiával, amivel <em>képes a
                         csillagközi
@@ -154,7 +150,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col mb-3">
+            <div class="col-12 mb-3">
                 <h4 id="forras">Források:</h4>
                 <div id="forrasok">
                     <a href="https://hu.wikipedia.org/wiki/Avatar_(film)" target="_blank">Wikipedia</a> <br>
@@ -189,6 +185,9 @@
             </div>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 
 </html>
