--- a/szereplok.html
+++ b/szereplok.html
@@ -8,15 +8,12 @@
     <title>Avatár szereplők</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/szereplok.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Avatár</a>
+        <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -25,14 +22,13 @@
             <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="index.html">Főoldal</a>
                 <a class="nav-item nav-link" href="pandora.html">Pandora</a>
-                <a class="nav-item nav-link" href="szereplok.html">Szereplők</a>
                 <a class="nav-item nav-link" href="https://forms.gle/vSq2aA9jDRyvEHu59" target="_blank">Kérdőív</a>
             </div>
         </div>
     </nav>
     <main class="container tartalom">
         <div class="row mt-3 p-3">
-            <div class="col-md-6">
+            <div class="col-md-6"> 
                 <h2>Főbb karakterek:</h2>
             </div>
             <div class="col-md-6">
@@ -41,7 +37,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col-12">
                 <table>
                     <tr>
                         <td class="elso">Na’vik:</td>
@@ -123,12 +119,12 @@
             </div>
         </div>
         <div class="row mt-4">
-            <div class="col">
+            <div class="col-12">
                 <h2 class="mb-5">Stáblista:</h2>
             </div>
         </div>
         <div class="row pb-3">
-            <div class="col-8">
+            <div class="col-12 col-md-8 col-lg-7 offset-lg-1">
                 <table id="masodik">
                     <tr>
                         <td class="elso">Rendezte:</td>
@@ -162,7 +158,7 @@
                     </tr>
                 </table>
             </div>
-            <div class="col-4">
+            <div class="col-md-4 col-lg-4">
                 <img class="img-fluid img-thumbnail mx-auto d-block bg-info d-none d-md-block" id="james"
                     src="avatar-james-cameron-2.jpg" alt="James Cameron" title="James Cameron">
             </div>
@@ -170,11 +166,14 @@
     </main>
     <footer class="container">
         <div class="row">
-            <div class="col">
+            <div class="col-12">
                 <p class="text-center py-2 bg-light text-dark">Készítette: Veszteg Bernadett</p>
             </div>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 
 </html>
